<resources>
    <string name="app_name">NYSC Corpers</string>
    <string name="add_name">Add Corper</string>
    <string name="edit_name">Edit Corper</string>
    <string name="view_name">Corper </string>
    <string name="no_corper_available">No Corper Available...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="corper_call_up_no">corper call up no</string>
    <string name="corper_name">corper name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="call_up_number">Call up Number</string>
    <string name="name">Name</string>

</resources>
