<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/edit_pic"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"

            />

        <ImageButton
            android:id="@+id/edit_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/baseline_add_a_photo_24"
            android:onClick="takePhoto"
            android:src="?attr/selectableItemBackground" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/edit_call_up_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/call_up_number" />

        <EditText
            android:id="@+id/edit_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="number"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/edit_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/date_of_birth" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/edit_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/male"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/edit_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/female"
                android:onClick="onRadioButtonClicked" />
        </RadioGroup>
    </LinearLayout>


</LinearLayout>